--- a/index.css
+++ b/index.css
@@ -3,8 +3,9 @@
   background-color: #ef233c;
   color: #2b2d42;
   padding: 16px;
-  font-size: 16px;
+  font-size: 26px;
   border: none;
+  font-family: "thunderstorm";
 }
 
 /* The container <div> - needed to position the dropdown content */
